--- a/Posting App Assignment/Main/homepage.html
+++ b/Posting App Assignment/Main/homepage.html
@@ -101,7 +101,7 @@
                 </span>
               </label>
             </div>
-            <p id="userCurrentEmail_P">paap@gmail.com</p>
+            <p id="userCurrentEmail_P"></p>
           </div>
           <button id="postBtn">POST</button>
         </div>
@@ -109,6 +109,8 @@
 
       <div id="centerPostDiv"></div>
     </main>
+
+    
     <!-- Modals -->
 
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
