--- a/Posting App Assignment/SignUp/SignUp.html
+++ b/Posting App Assignment/SignUp/SignUp.html
@@ -79,8 +79,8 @@
           </button>
 
           <div class="social_icons">
-            <img src="../Assets/google_Icon.png" class="google_icon" />
-            <img src="../Assets/facebook_icon.png" class="facebook_icon" />
+            <i class="fa-brands fa-google google_icon"></i>
+            <i class="fa-brands fa-facebook facebook_icon"></i>
           </div>
           <div class="haveAccount_div">
             <p>Already a User?</p>
