--- a/Posting App Assignment/index.html
+++ b/Posting App Assignment/index.html
@@ -76,8 +76,8 @@
           </div>
           <button id="SignIn_btn">SIGN IN</button>
           <div class="social_icons">
-            <img src="./Assets/google_Icon.png" class="google_icon" />
-            <img src="./Assets/facebook_icon.png" class="facebook_icon" />
+            <i class="fa-brands fa-google google_icon"></i>
+            <i class="fa-brands fa-facebook facebook_icon"></i>
           </div>
           <div class="needAccount_div">
             <p>Need an Account?</p>
