--- a/Ecommerce Assignment/index.html
+++ b/Ecommerce Assignment/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +10,10 @@
       rel="stylesheet"
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <link
       rel="stylesheet"
@@ -28,8 +33,8 @@
           placeholder="Search products, e.g. sneakers, bags..."
         />
         <button id="Signup_btn" class="Signup_btn">Sign Up</button>
-        <div id="cart_counter" class="cart_counter">0</div>
-        <div id="cart_button" class="cart_button">Cart</div>
+        <div id="cart_button" class="cart_button">Cart<span class="cart_counter" id="cart_counter">0</span>
+        </div>        
       </header>
 
       <!-- Ad Section -->
@@ -98,7 +103,7 @@
     </div>
 
     <!-- Inner Card -->
-    <div class="innercard_div" id="innercard_div"></div>
+    <div class="innercard_div" id="innercard_div">
       <div class="inner_card" id="inner_card">
         <img
           src=""
