--- a/Ecommerce Dashboard/AddProducts/MyShop.html
+++ b/Ecommerce Dashboard/AddProducts/MyShop.html
@@ -3,9 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add</title>
+    <title>Dashboard</title>
+    <link rel="icon" type="image/png" href="/Assets/logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous" />
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="stylesheet" href="./MyShop.css">
 </head>
 <body>
-    
+    <header> 
+        <nav class="navbar navbar-expand-lg bg-dark fixed-top navbar">
+            <div class="container-fluid d-flex justify-content-between align-items-center">
+                <img src="/Assets/logo.png" class="logoImg" alt="Logo">
+                    <button style="background-color: antiquewhite;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <!-- Navbar navigation -->
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mx-auto gap-4 navLinks">
+                        <a class="nav-link text-white" href="/index.html">Home</a>
+                        <a class="nav-link text-white" href="/NavPages/Shops/NavShops.html">Shop</a>
+                        <a class="nav-link text-white" href="/NavPages/NewArrivals/NewArrivals.html">New Arrivals</a>
+                        <a class="nav-link text-white" href="/NavPages/ContactUs/ContactUs.html">Contact Us</a>
+                        <a class="nav-link text-white" href="/NavPages/AboutUs/AboutUs.html">About Us</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/MyShop.html">Dashboard</a>
+                    </div>
+                    <div class="navbar-nav navIcons">
+                        <a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
+                        <a class="nav-link text-white"><i class="fa-solid fa-user-tie"></i></a>
+                        <a id="signOutBtn" class="nav-link text-white"><i class="fa-solid fa-arrow-right-from-bracket"></i></a> 
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="dashboard container-fluid">
+            <div class="form-container">
+                <h4>Add New Product</h4>
+                <div class="product-data" id="product-data">
+                    <div class="mb-3">
+                        <label>Product Name</label>
+                        <input type="text" class="form-control" id="product_name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label>Category</label>
+                       <select class="form-control" id="category_dropdown">
+                            <option>Jackets</option>
+                            <option>Handbag</option>
+                            <option>Sunglasses Case</option>
+                            <option>Shoes</option>
+                            <option>Belts</option>
+                            <option>Travel Bags</option>   
+                            <option>Keychains</option>
+                       </select>
+                    </div>
+                    <div class="mb-3">
+                        <label>Price ($)</label>
+                        <input type="number" class="form-control" id="product_price" required>
+                    </div>
+                    <div class="mb-3">
+                        <label>Description</label>
+                        <textarea class="form-control" id="product_description" rows="3"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label>Product Image</label><br>
+                        <button type="button" id="upload_widget" class="btn btn-primary btn-sm mb-2">Upload Image</button>
+                    </div>
+                    <button id="UploadProductBtn" class="btn btn-success w-100">Add Product</button>
+                </div>
+            </div>
+            <!-- User Products -->
+             <div class="products-container" id="userProducts">
+             </div>
+        </div>
+    </main>
+    <footer class="footer">
+            <div class="footer-top">
+              <div class="container footer-grid">
+                 <!-- About --> 
+                <div class="footer-section">
+                    <h2 class="footer-heading">About Us</h2>
+                    <p class="footer-text"> We are a premium brand offering a curated selection of leather goods, crafted with the finest materials and attention to detail. </p>  
+                </div>
+                 <!-- Quick Links --> 
+                <div class="footer-section">
+                    <h2 class="footer-heading">Quick Links</h2>
+                    <ul class="footer-links">
+                        <li><a href="#">Offer Zone</a></li>
+                        <li><a href="#">SiteMap</a></li>
+                        <li><a href="#">New Launch</a></li>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">Career</a></li>
+                    </ul>
+                </div>
+                <!-- Help -->
+                <div class="footer-section">
+                    <h2 class="footer-heading">Help</h2>
+                    <ul class="footer-links">
+                        <li><a href="#">Return/Exchange</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Shipping & Delivery</a></li>
+                        <li><a href="#">Lost Password</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <!-- Contact -->
+                 <div class="footer-section">
+                    <h2 class="footer-heading">Contact Details</h2>
+                    <p class="footer-text">
+                        Address: Gulshan-E-Iqbal, Karachi<br /> 
+                        Contact: My Phone Number<br /> 
+                        E-mail: muhammadfarhanworks@gmail.com </p>
+                        <img src="/Assets/logo.png" alt="Logo" class="footer-logo" />
+                    </div>
+                </div> 
+            </div>
+            <!-- Bottom -->
+             <div class="footer-bottom">
+                <div class="container footer-bottom-flex">
+                    <p class="footer-copy"> © 2025 Leather Shop | Developed by <span>Farhan</span> </p>
+                    <ul class="footer-socials">
+                        <li><a href="https://www.linkedin.com/in/muhammad-farhan-000b1438a/">
+                        <i class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/muhammadfarhan145"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                    </ul>
+                </div>
+             </div>
+        </footer>
+        <!-- Modal -->
+        <div class="modal fade" id="signOutModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content p-3 text-center">
+                    <p>User Signed Out Succesfully!</p>
+                </div>
+            </div>
+         </div>
 </body>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+        <script src="./MyShop.js"></script>
 </html>
