--- a/Ecommerce Dashboard/NavPages/Shops/Shops.html
+++ b/Ecommerce Dashboard/NavPages/Shops/Shops.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Arrivals</title>
+    <title>Shop</title>
     <link rel="icon" type="image/png" href="/Assets/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link rel="stylesheet" href="./NewArrivals.css">
+    <link rel="stylesheet" href="./Shops.css">
 </head>
 <body>
     <header> 
@@ -20,8 +20,8 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                     <div class="navbar-nav mx-auto gap-4 navLinks">
                         <a class="nav-link text-white" href="../../index.html">Home</a>
-                        <a class="nav-link text-white" href="../Shops/Shops.html">Shop</a>
-                        <a class="nav-link active text-white Navhome" aria-current="page" href="#">New Arrivals</a>
+                        <a class="nav-link active text-white Navhome" aria-current="page" href="#">Shop</a>
+                        <a class="nav-link text-white" href="../NewArrivals/NewArrivals.html">New Arrivals</a>
                         <a class="nav-link text-white" href="../ContactUs/ContactUs.html">Contact Us</a>
                         <a class="nav-link text-white" href="../AboutUs/AboutUs.html">About Us</a>
                     </div>
@@ -39,20 +39,20 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="newArrivalsHeroSection">
-            <img src="/Assets/homePageImage.jpeg" class="newArrivalsBannerImg" alt="New Arrivals Banner">
-            <div class="newArrivalsBannerContent">
-                <h1 class="newArrivalsBannerH1">Discover Our Latest Leather Creations</h1>
-                <p class="newArrivalsBannerP">Explore the newest additions to our premium collection.</p>
-                <a href="#newArrivalsProductsSection" class="newArrivalsBannerBtn">Shop New Arrivals</a>
+        <section class="shopHeroSection">
+            <img src="/Assets/homePageImage.jpeg" class="shopBannerImg" alt="Shop Banner">
+            <div class="shopBannerContent">
+                <h1 class="shopBannerH1">Explore Our Leather Collection</h1>
+                <p class="shopBannerP">Discover premium jackets, handbags, travel bags, and more.</p>
+                <a href="#shopProductsSection" class="shopBannerBtn">Shop Now</a>
             </div>
         </section>
 
-        <!-- New Arrivals Section -->
-        <section class="newArrivalsProductsSection" id="newArrivalsProductsSection">
+        <!-- Products Section -->
+        <section class="shopProductsSection" id="shopProductsSection">
             <div class="container">
-                <h2 class="section-title">New Arrivals</h2>
-                <div class="newArrivalsProductCardDiv"></div>
+                <h2 class="section-title">All Products</h2>
+                <div class="shopProductCardDiv"></div>
             </div>
         </section>
     </main>
@@ -127,8 +127,8 @@
                             <p class="cartProductPrice"></p>
                         </div>
                         <div class="carttotalItemsPrice">
-                            <p>Sub Total</p>
-                            <p>$170.00</p>
+                            <p></p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -161,14 +161,6 @@
             </div>
             <div class="toast-body">
                 <p>Item Added Successfully!</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="ErrorModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content p-3 text-center">
-                <p>Error</p>
             </div>
         </div>
     </div>
@@ -209,8 +201,9 @@
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="NewArrivals.js"></script>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="./Shops.js"></script>
+</html>
