Update Dashboard Assignment

--- a/Ecommerce Dashboard/AddProducts/MyShop.html
+++ b/Ecommerce Dashboard/AddProducts/MyShop.html
@@ -124,8 +124,7 @@
                 <div class="container footer-bottom-flex">
                     <p class="footer-copy"> © 2025 Leather Shop | Developed by <span>Farhan</span> </p>
                     <ul class="footer-socials">
-                        <li><a href="https://www.linkedin.com/in/muhammad-farhan-000b1438a/">
-                        <i class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/muhammad-farhan-000b1438a/"><i class="fa-brands fa-linkedin"></i></a></li>
                         <li><a href="https://github.com/muhammadfarhan145"><i class="fa-brands fa-github"></i></a></li>
                         <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
                     </ul>
