--- a/Ecommerce Dashboard/NavPages/NewArrivals/NewArrivals.html
+++ b/Ecommerce Dashboard/NavPages/NewArrivals/NewArrivals.html
@@ -55,6 +55,16 @@
                 <div class="newArrivalsProductCardDiv"></div>
             </div>
         </section>
+        <div class="arrivalsPageButtons">
+            <a href="../../index.html">
+                <div class="backToHomeButton">
+                    <i class="fa-solid fa-arrow-left fa-lg"></i>
+                </div>
+            </a>
+            <button id="arrivalsPageButtons_CartBtn" class="btn btn-primary arrivalsPageButtons_CartBtn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                <i class="fa-solid fa-cart-shopping fa-lg"></i>
+            </button>  
+        </div>
     </main>
 
     <footer class="footer">
