--- a/Ecommerce Dashboard/NavPages/Shops/Shops.html
+++ b/Ecommerce Dashboard/NavPages/Shops/Shops.html
@@ -47,7 +47,6 @@
                 <a href="#shopProductsSection" class="shopBannerBtn">Shop Now</a>
             </div>
         </section>
-
         <!-- Products Section -->
         <section class="shopProductsSection" id="shopProductsSection">
             <div class="container">
@@ -55,6 +54,16 @@
                 <div class="shopProductCardDiv"></div>
             </div>
         </section>
+        <div class="shopPageButtons">
+            <a href="../../index.html">
+                <div class="backToHomeButton">
+                    <i class="fa-solid fa-arrow-left fa-lg"></i>
+                </div>
+            </a>
+            <button id="shopPageButtons_CartBtn" class="btn btn-primary shopPageButtons_CartBtn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                <i class="fa-solid fa-cart-shopping fa-lg"></i>
+            </button>  
+        </div>
     </main>
 
     <footer class="footer">
