--- a/Ecommerce Dashboard/index.html
+++ b/Ecommerce Dashboard/index.html
@@ -60,48 +60,40 @@
                             <img src="./Assets/Home-Shop-Now-banner.jpg" >
                         </div>
                         <div class="MoreProductsCard">
-                            <a href="" class="MoreProductsCard_a">
-                                <div class="MoreProduct">
-                                    <img src="./Assets/home-moreProductImg1.jpg" class="MoreProductcardImg">
-                                    <div class="MoreProductcard-content">
-                                        <p class="MoreProductTitle">Leather Boots</p>
-                                        <p class="MoreProductPrice">$199.00</p>
-                                    </div>
+                            <div class="MoreProduct">
+                                <img src="./Assets/home-moreProductImg1.jpg" class="MoreProductcardImg">
+                                <div class="MoreProductcard-content">
+                                    <p class="MoreProductTitle">Leather Boots</p>
+                                    <p class="MoreProductPrice">$199.00</p>
                                 </div>
-                            </a>    
+                            </div> 
                         </div>
                         <div class="MoreProductsCard">
-                            <a href="" class="MoreProductsCard_a">
-                                <div class="MoreProduct">
-                                    <img src="./Assets/home-moreProductImg2.jpg" class="MoreProductcardImg">
-                                    <div class="MoreProductcard-content">
-                                        <p class="MoreProductTitle">Leather Boots</p>
-                                        <p class="MoreProductPrice">$119.00</p>
-                                    </div>
+                            <div class="MoreProduct">
+                                <img src="./Assets/home-moreProductImg2.jpg" class="MoreProductcardImg">
+                                <div class="MoreProductcard-content">
+                                    <p class="MoreProductTitle">Leather Boots</p>
+                                    <p class="MoreProductPrice">$119.00</p>
                                 </div>
-                            </a>    
+                            </div>   
                         </div>
                         <div class="MoreProductsCard">
-                            <a href="" class="MoreProductsCard_a">
-                                <div class="MoreProduct">
-                                    <img src="./Assets/home-moreProductImg3.jpg" class="MoreProductcardImg">
-                                    <div class="MoreProductcard-content">
-                                        <p class="MoreProductTitle">Leather Boots</p>
-                                        <p class="MoreProductPrice">$139.00</p>
-                                    </div>
+                            <div class="MoreProduct">
+                                <img src="./Assets/home-moreProductImg3.jpg" class="MoreProductcardImg">
+                                <div class="MoreProductcard-content">
+                                    <p class="MoreProductTitle">Leather Boots</p>
+                                    <p class="MoreProductPrice">$139.00</p>
                                 </div>
-                            </a>    
+                            </div>
                         </div>
                         <div class="MoreProductsCard">
-                            <a href="" class="MoreProductsCard_a">
-                                <div class="MoreProduct">
-                                    <img src="./Assets/home-moreProductImg4.jpg" class="MoreProductcardImg">
-                                    <div class="MoreProductcard-content">
-                                        <p class="MoreProductTitle">Leather Boots</p>
-                                        <p class="MoreProductPrice">$129.00</p>
-                                    </div>
+                            <div class="MoreProduct">
+                                <img src="./Assets/home-moreProductImg4.jpg" class="MoreProductcardImg">
+                                <div class="MoreProductcard-content">
+                                    <p class="MoreProductTitle">Leather Boots</p>
+                                    <p class="MoreProductPrice">$129.00</p>
                                 </div>
-                            </a>    
+                            </div>
                         </div>
                         <div class="MoreProductsCard">
                             <a href="" class="MoreProductsCard_a">
@@ -133,7 +125,7 @@
                             </div>
                         </div>
                         <div class="LatestPost">
-                            <h3>Latest Post</h3>
+                            <h3>Post</h3>
                             <img src="./Assets/latest-post-img-3.jpg" class="homelatestPostBannerImg">
                             <div class="latestPostContent">
                                 <p class="latestPostContent_B_p">Bold Looks. Real Leather. Ultimate Confidence.</p>
