--- a/Ecommerce Dashboard/NavPages/ContactUs/ContactUs.html
+++ b/Ecommerce Dashboard/NavPages/ContactUs/ContactUs.html
@@ -26,11 +26,8 @@
                         <a class="nav-link text-white" href="../AboutUs/AboutUs.html">About Us</a>
                     </div>
                     <div class="navbar-nav navIcons">
-                         <a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
-                        <a class="nav-link text-white" href="/NavPages/SignIn/SignIn.html"><i class="fa-solid fa-user-plus"></i></i></a>
-                        <button id="navCartBtn" class="btn btn-primary nav-link text-white navCartBtn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                            <i class="fa-solid fa-cart-shopping"></i>
-                        </button>
+                        <a class="nav-link text-white" href="/index.html"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
+                        <a class="nav-link text-white" href="/NavPages/SignIn/SignIn.html"><i class="fa-solid fa-user-plus"></i></a>
                     </div>
                 </div>
             </div>
