--- a/Ecommerce Dashboard/Products/product.html
+++ b/Ecommerce Dashboard/Products/product.html
@@ -24,7 +24,6 @@
                         <a class="nav-link text-white" href="/NavPages/NewArrivals/NewArrivals.html">New Arrivals</a>
                         <a class="nav-link text-white" href="/NavPages/ContactUs/ContactUs.html">Contact Us</a>
                         <a class="nav-link text-white" href="/NavPages/AboutUs/AboutUs.html">About Us</a>
-                        <a class="nav-link text-white homeNavDashboardLink" id="homeNavDashboardLink">Dashboard</a>
                     </div>
                     <div class="navbar-nav navIcons">
                         <a class="nav-link text-white" href="/NavPages/Shops/Shops.html"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
@@ -163,6 +162,33 @@
             </div>
         </div>
     </div>
+    <!-- Off Canvas (Cart) -->
+    <div class="offcanvas offcanvas-start CartOffCanvas" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasExampleLabel">Cart</h5>
+                <button type="button" class="btn-close offCanvasCloseBtn" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body" id="offcanvas-body">
+                <div class="cartProductCards">
+                    <div class="cartProductCard">
+                        <div class="cartProduct-img-title-icon">
+                            <img src="" class="cartProductsImg">
+                            <div class="cartProduct-TitleandIcon">
+                                <p class="cartProductTitle"></p>
+                                <i class="fa-solid fa-trash"></i>
+                            </div>
+                        </div>    
+                        <div class="cartProductPriceDiv">
+                            <p class="cartProductPrice"></p>
+                        </div>
+                        <div class="carttotalItemsPrice">
+                            <p></p>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
