--- a/Ecommerce Dashboard/NavPages/SignUp/SignUp.html
+++ b/Ecommerce Dashboard/NavPages/SignUp/SignUp.html
@@ -48,6 +48,32 @@
         </div>
       </div>
     </main>
+        <!-- Modal -->
+    <div
+      class="modal fade"
+      id="fielderrorModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content p-3 text-center">
+          <p>Fill the fields correctly!</p>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="modal fade"
+      id="passworderrorModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content p-3 text-center">
+          <p>Password must be at least 6 characters!</p>
+        </div>
+      </div>
+    </div>
 </html>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
