--- a/Chat App Assignment/index.html
+++ b/Chat App Assignment/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign In</title>
     <link rel="icon" type="image/png" href="./Assets/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -11,17 +11,16 @@
 </head>
 <body>
     <div class="Container">
-        <h3>Sign Up</h3>
-        <div class="SignUpInputs">
-            <input type="text" id="usernameInput" placeholder="Enter Your Username" required />
+        <h3>Sign In</h3>
+        <div class="SignInInputs">
             <input type="email" id="emailInput" placeholder="Enter Your Email" required />
             <input type="password" id="passwordInput" placeholder="Enter Your Password" required />
             <p id="showError_P"></p>
         </div>
-        <button id="signUpButton" class="btn btn-primary signUpButton" type="button" >
-          SIGN UP
+        <button id="signInButton" class="btn btn-primary signInButton" type="button" >
+            SIGN IN
         </button>
-        <p class="haveAccountP">Already have an account? <a href="./SignIn/SignIn.html">LOGIN</a></p>
+        <p class="haveAccountP">Need an Account? <a href="./SignUp/SignUp.html">SIGN UP</a></p>
         <div class="IDButtonsDiv">
           <button class="AdminIDBtns" onclick="admin1IdPasswordModal()">
             See Admin ID
@@ -41,7 +40,7 @@
       </div>
     </div>
 
-     <div class="modal fade" id="passworderrorModal" tabindex="-1" aria-hidden="true">
+    <div class="modal fade" id="passworderrorModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-content p-3 text-center">
                 <p>Password must be at least 6 characters!</p>
@@ -49,7 +48,7 @@
         </div>
     </div>
 
-     <div class="modal fade" id="admin1IdPasswordModal" tabindex="-1" aria-hidden="true">
+    <div class="modal fade" id="admin1IdPasswordModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-content p-3 text-center">
                 <h6>Admin ID</h6>
@@ -68,9 +67,10 @@
             </div>
         </div>
     </div>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="./app.js"></script>    
+<script src="./app.js"></script>
 </html>
